--- a/projects/example/src/index.html
+++ b/projects/example/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Example</title>
+  <title>Xl-绿色无污染的Angular组件库</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
