通过JS的方式调用媒体查询

--- a/projects/example/src/index.html
+++ b/projects/example/src/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/flex.css"/>
 </head>
 <body>
-  <div app-root></div>
+  <div xlMedia></div>
+  <div app-root  ></div>
 </body>
 </html>
