自适应大体k框架完成，table结构完成，后续w完善细节，样式

--- a/projects/example/src/index.html
+++ b/projects/example/src/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Xl-绿色无污染的Angular组件库</title>
+  <title>Xl</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="assets/css/flex.css"/>
 </head>
-<body>
-  <div xlMedia></div>
-  <div app-root  ></div>
+<body >
+  <div app-root ></div>
 </body>
 </html>
